# redic3t

./: Makefile  README.md  pyproject.toml  setup.py
redic3t/: __init__.py  analyzer.py  cli.py  config.py  extractor.py  wayback.py
redic3t/data/: regex_patterns.json
tests/: test_smoke.py
